# litmus-zk-sp1

./: .gitignore  Cargo.toml  README.md
crates/lcodecs/: Cargo.toml
crates/lcodecs/src/binary/: bites.rs  chain.rs  chain_1.rs  chain_2.rs  constants.rs  crypto.rs  mod.rs  primitives_1.rs  primitives_2.rs  primitives_3.rs  utils.rs
crates/lcodecs/src/binary/chain/: block.rs  block_id.rs  blocks.rs  era.rs  era_end.rs  era_id.rs  identifiers.rs  mod.rs  motes.rs  protocol_version.rs  transaction_hash.rs  validator_weight.rs
crates/lcodecs/src/binary/crypto/: digest.rs  mod.rs  signature.rs  verification_key.rs
crates/lcrypto/: Cargo.toml
crates/lcrypto/src/: digest.rs  lib.rs  signature.rs  verification_key.rs
lib/: Cargo.toml
lib/src/: constants.rs  crypto.rs  lib.rs
lib/src/chain/: mod.rs  types.rs
lib/src/chain/types/: block_hash.rs  block_height.rs  block_id.rs  block_signature.rs  block_v1_header.rs  block_v2.rs  block_v2_body.rs  chain_name_digest.rs  era_consensus_info.rs  era_id.rs  era_validator_weights.rs  mod.rs  motes.rs  validator_id.rs  validator_weight.rs  weight.rs
lib/src/crypto/: byte_array.rs  digest.rs  digest_bytes.rs  digests.rs  mod.rs  signature.rs  signatures.rs
lib/src/utils/: bites.rs  mod.rs
program/: Cargo.toml
program/src/: chain.rs  constants.rs  crypto.rs  main.rs
script/: Cargo.toml
script/envs/: dev.toml
script/fixtures/: block_hash_trusted.txt  crypto.json  seed.sh
script/fixtures/blocks/: block-00-6e6e2fb4a3cfc93debf2341df3506c166bcfe254ab6455e28caa73bee36d1001.json  block-01-6a282642b1822b53865c83f3e2e18de19a443028b114aa380ab02e4d59521733.json  block-02-2b243370806dec1a23336866fba994bb3be1340061f417f5b0427f3951c951fc.json  block-03-5524939060ee1e6288f4aabd592b04bf065bda7c24209b957c51ee291a45e788.json  block-04-1a149082096ed1938aa02b9055be670ed42cacad8ef5c4d64a81b4de2be62488.json  block-05-88faf483ed85b085b542c9c6204c50b9ae0340be6ebcd95645c0152373d8fe8d.json  block-06-b65b5a4047c90202914d4d2fec5bafe4ca1f9e052b1126ce8f8a3d5d0fc979e0.json  block-07-3ebe8dbb339f3b52d51cdf5b5df86ef890027703361927f64120a1f3097a0373.json  block-08-1576198351133587e757d638c907fa3dbddb2300e8dd9f7ac034528f5fc6b6b2.json  block-09-0651916e4ff9a18f26056d5049216a9cdc7761bb3f1f609c8638e18738c013e7.json  block-10-8698d66543e4abfd8bc66ab17cd899363670e119e76191699f2a58896f15abfb.json  block-11-b45ac37f204dcbd4c245b74e364d5fd7f83ec224b9b003d7e48c6818bda245c1.json  block-12-0459dedcc5c919a17bb3d66406f85feea740fff8d4bc8b49e7c57f769113a9ab.json  block-13-c83b87b8afdcee7f6d8837f08e1eca72df6b1f4c7acccfc6e7a4ef5dbabe1b38.json  block-14-454e7f2394f1c16111755fd29f32ccbef9dd0099044838fb38d7bc74b806d9a3.json  block-15-57250669ea59918f3729e293b9fb12311ed20f2466cb273ede221a6bd4db5691.json  block-16-ccd6680c65411a76051e17324e0eec5a73dce1d187d49671d0bbc51a93a23749.json  block-17-2f8e9f8685d26e1d5f70d832bd376d8409d7f8edade2b9dfaa242fed4f236ae2.json  block-18-77207d0750081d88493f21a7238d992ab0ca6898bf5918c9283caa0df631acc0.json  block-19-b4da8c88fe5ba928ba19691f5c5195d3826f6b07761b39a5312f04362620a338.json  block-20-11fe8de2783198dad61a32b319bab723f60995ca18489f64e8bad908b771788b.json  block-21-e1481c726dc9901b4059a1cd3822d5d83af0563934751a493bd6070b377e2a48.json  block-22-fc5b862cb19094df75f2e406f1c8c6f0c8466b8b8e5dc15a0f88ebac88c5cd5f.json  block-23-598eaeb9c64443985d5c1dd6d793615a56908893ff5374d2a71c7fb972705b2b.json  block-24-acf0865c01bb0a92aa888417c0e8322f85eba9b9ec0b463146850a3abeaada7a.json  block-25-13f28e8d8a84adfc67ad090aeb24aad86b010448239adaeda618e560c2d46d0a.json  block-26-921762540ad4c125293b5a7a830a7bb36ad3e7bec9568adaaaf758e3d4dc3c90.json  block-27-bed6d5aee499871a950d2919cb89a64b738eb3f075441d2764ebbedd80837fe2.json  block-28-45d1a14f842f8e771d620111bc08ff23db2d2a65a9b809c5fa84facd77fc97f1.json  block-29-46d0e12877b2e985037d54262ca46ad0f1bdc4d08c1a5e66a910d571d3f75a39.json  block-30-8f199dbcea0de7793c03a095d73f4f960feb738b93f9297d62f5ada8a82a09c2.json  block-31-a8951d49d54e7e0069c76f151a4bafab2215e9a3afcfe01dde983a8132ca9181.json  block-32-ac7e4bf7b1198ff991798bcbba183e3cbcb0ff064eea586fb60f6208146a33f7.json  block-33-04a54a332de9546acc7ffe2a4e618526a0bd76446fe829c0aecaf0acac182f32.json  block-34-c5ecbec1e8e632a0452748b7b4cff9db5c108bf1a241cf389f667b0a510ae19f.json  block-35-029904bcbb6e8bc459cb184586bac4cfa8f712e980573dab4ab345bf976d18d0.json  block-36-02ea4060f5610ebef1826a4b4706f69738fc704c23ec517ce16bef330c140584.json  block-37-f3d5d4ab9da1b41e63fc989d80ea0f8d4b5c063035c0cb5cad773b58871c55a5.json  block-38-c4a4320f37e6f3808a6851044044857b8af770916f3d3d729962e4fc43e3a573.json  block-39-36418265448bd640d7991246af734462fbfaa32ff533804addb3c76f80cf3ac8.json  (+11 more)
(+71 files in other folders)
