[workspace]
members = ["lib", "program", "script"]
resolver = "2"

[patch.crates-io]
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
blake2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "blake2" }
