[workspace]
resolver = "2"
# exclude = ["hack"]
members = [
    "crates/lcodecs",
    "crates/lcrypto", "crates/lcrypto1",
    "crates/ltypes",
    "crates/lutils",
    "crates/lverifiers",
    "hack",
    "program",
    "script",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
proptest = { version = "1.5.0", features = ["attr-macro"] }
proptest-derive = "0.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_cbor = "0.11.2"

[patch.crates-io]
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
blake2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "blake2" }
