[package]
name = "litmus-zk-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.11.0-pre.3"
ed25519-consensus = "2.1.0"
hex = "0.4.3"
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_bytes = { version = "0.11.15", features = ["alloc"] }
sp1-derive = "2.0.0"
