[package]
version = "0.1.0"
name = "litmus-zk-program"
edition = "2021"

[build-dependencies]
sp1-build = "2.0.0"

[dependencies]
lcrypto = { path = "../crates/lcrypto" }
ltypes = { path = "../crates/ltypes" }
lutils = { path = "../crates/lutils" }
serde = { version = "1.0.214", features = ["derive"] }
sp1-zkvm = "1.2.0"
