[package]
version = "0.1.0"
name = "litmus-zk-script"
edition = "2021"
default-run = "litmus-zk"

[[bin]]
name = "litmus-zk"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
litmus-zk-lib = { path = "../lib" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sp1-sdk = "1.2.0"
tracing = "0.1.40"

[build-dependencies]
sp1-helper = "1.2.0"
