[package]
name = "lcodecs"
version = "0.1.0"
edition = "2021"

[dependencies]
lcrypto = { path = "../lcrypto" }
ltypes = { path = "../ltypes" }
lutils = { path = "../lutils" }
serde.workspace = true

[dev-dependencies]
proptest = { version = "1.5.0", features = ["attr-macro"] }
proptest-derive = "0.5.0"
