[package]
name = "lcodecs"
version = "0.1.0"
edition = "2021"

[dependencies]
lcrypto = { path = "../lcrypto" }
ltypes = { path = "../ltypes" }
lutils = { path = "../lutils" }
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
proptest-derive.workspace = true
rand.workspace = true
